deploy: 61f05bd49ea96ed1350ed451c1df6f1f5ab657c3

--- a/writing.html
+++ b/writing.html
@@ -174,6 +174,24 @@
   <div class="bg-white mb3 pa4 gray overflow-hidden">
     <span class="f6 db">Writing</span>
     <h1 class="f3 near-black">
+      <a href="./writing/mlops_for_startups.html" class="link black dim">
+        MLOps for Startups
+      </a>
+    </h1>
+    <div class="nested-links f5 lh-copy nested-copy-line-height">
+      OVERVIEW Start your development by writing the overall impact and feature overview in the Press Release doc and README
+If your time to ship is more than 2 weeks, write a functional spec
+In case of bug fixes, add bug details or link to Asana/Github Issues
+Always. Do trunk-based development. Don’t restrict a deployment trigger to specific people. As soon as you are done, go ahead, deploy and let others deploy.
+    </div>
+  </div>
+</div>
+</div>
+      
+        <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+  <div class="bg-white mb3 pa4 gray overflow-hidden">
+    <span class="f6 db">Writing</span>
+    <h1 class="f3 near-black">
       <a href="./writing/politics_at_work.html" class="link black dim">
         Politics at Work
       </a>
@@ -306,23 +324,6 @@ Here is what they did, organized by 5 themes:
   Outside-Visible Work
   Unlock Knowledge Expertise and know-how stay trapped in emails, docs and codebases. Unlock this for everyone else.
 Get your Star Salesman on an internal podcast to spill their secrets.
-    </div>
-  </div>
-</div>
-</div>
-      
-        <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-  <div class="bg-white mb3 pa4 gray overflow-hidden">
-    <span class="f6 db">Writing</span>
-    <h1 class="f3 near-black">
-      <a href="./writing/failresume.html" class="link black dim">
-        Fail Resume
-      </a>
-    </h1>
-    <div class="nested-links f5 lh-copy nested-copy-line-height">
-      A fail resume is, as its name suggests, a list of rejections and setbacks.
-This concept originated in academia, but can be applied to improve one’s career, resilience, and approach to challenges in any walk of life.
-I’ve organized my setbacks by year (starting with 2016), and what constitutes a “failure” (or fail) here is based solely on my own judgement. It’s important to not only list the failures, but also learn from them, so I will add reflections to some of them (in progress).
     </div>
   </div>
 </div>
