deploy: 2c4bdedbc8f73fe596553aa3219001215789fa1e

--- a/tags.html
+++ b/tags.html
@@ -532,9 +532,9 @@ I am now in a even more Computer Vision focused role for a small enterprise tech
         
           <div class="relative w-100 mb4 bg-white nested-copy-line-height">
   <div class="bg-white mb3 pa4 gray overflow-hidden">
-    <span class="f6 db">Drafts</span>
+    <span class="f6 db">Writing</span>
     <h1 class="f3 near-black">
-      <a href="./drafts/belief_arbitrage.html" class="link black dim">
+      <a href="./writing/belief_arbitrage.html" class="link black dim">
         Belief Arbitrage
       </a>
     </h1>
