--- a/writing.html
+++ b/writing.html
@@ -174,6 +174,23 @@
   <div class="bg-white mb3 pa4 gray overflow-hidden">
     <span class="f6 db">Writing</span>
     <h1 class="f3 near-black">
+      <a href="./writing/belief_arbitrage.html" class="link black dim">
+        Belief Arbitrage
+      </a>
+    </h1>
+    <div class="nested-links f5 lh-copy nested-copy-line-height">
+      This is a 3 part essay.
+Part 1: Talent In my teenage years, I first understood that the kind of family you’re born into gives you access to certain kinds of wealth e.g. money, network, habits/knowledge and social capital to do things you want.
+Most people in my peer group and even among the adults I could speak to, used these resources to make their own life materially more comfortable.
+    </div>
+  </div>
+</div>
+</div>
+      
+        <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+  <div class="bg-white mb3 pa4 gray overflow-hidden">
+    <span class="f6 db">Writing</span>
+    <h1 class="f3 near-black">
       <a href="./writing/mlops_for_startups.html" class="link black dim">
         MLOps for Startups
       </a>
@@ -301,22 +318,6 @@ I originally wrote this to give a chance to folks coming from non-NLP background
       Talent Cooling Kills Startup Growth Evaporative Cooling [1] occurs when the most high value contributors to a community realize that the community is no longer serving their needs any more and so therefore, leave.
 Then something remarkably interesting happens:
  When that happens, it drops the general quality of the community down such that the next most high value contributors now find the community underwhelming. Each layer of disappearances slowly reduces the average quality of the group until such a point that you reach the people who are so unskilled-and-unaware of it that they’re unable to tell that they’re part of a mediocre group.
-    </div>
-  </div>
-</div>
-</div>
-      
-        <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-  <div class="bg-white mb3 pa4 gray overflow-hidden">
-    <span class="f6 db">Writing</span>
-    <h1 class="f3 near-black">
-      <a href="./writing/shreyas.html" class="link black dim">
-        Shreyas Karanth: Moving from SW Engg to Product
-      </a>
-    </h1>
-    <div class="nested-links f5 lh-copy nested-copy-line-height">
-      Shreyas Karanth is a Product Manager at Soroco. Soroco is a Medium-sized Enterprise-focussed B2B Automation company. Before Product Management, Shreyas was the fastest growing engineer - going from a fresh grad to a Technical Lead within 3 years of graduation.
-This is also when I worked with him, during his engineering days. Here, I asked a bunch of questions why he moved to Product Management, what excites him and what he considers as Product Management work at Soroco.
     </div>
   </div>
 </div>
