deploy: 1ea154fecd9b57fcc7261a027dae41f5d5873454

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford 
 I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.
 I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.">
 
-<meta itemprop="wordCount" content="490">
+<meta itemprop="wordCount" content="495">
 <meta itemprop="keywords" content="personal," /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Me in 10 seconds Most recently, I built the ML stack and team at Verloop.io from 0 to 1 as the Founding ML Engineer.
@@ -179,6 +179,7 @@ I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford 
 <img src="https://images-eu.ssl-images-amazon.com/images/I/41uaueSqtUL._SX260_.jpg" alt="bookcover" style="width:261px;"/>
 <h2 id="talks">Talks</h2>
 <ol>
+<li>Fifth Elephant MLOps Conf: <a href="https://bit.ly/startupmlops2021">Slides</a></li>
 <li>PyCon India 2019: <a href="http://bit.ly/pycon2019talk">Slides</a> and <a href="https://youtu.be/UM56FDjSx9g">Youtube</a></li>
 <li>inMobi Tech Talks: A Nightmare on the LM Street; <a href="http://bit.ly/nirant-talk-inmobi">Slides</a></li>
 <li>Wingify DevFest: NLP for Indian Languages; <a href="http://bit.ly/nirant-talk-1">Slides</a>, <a href="https://www.youtube.com/watch?v=WiqV2W7tNc8">Youtube</a></li>
@@ -187,17 +188,17 @@ I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford 
 <h2 id="open-source-contributions">Open Source Contributions</h2>
 <ol>
 <li>
-<p><a href="https://github.com/NirantK/awesome-project-ideas">Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style="width:50px;display: inline-block;"/> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
+<p><a href="https://github.com/NirantK/awesome-project-ideas">Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style="width:10%;display: inline-block;"/> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
 </li>
 <li>
-<p><a href="https://github.com/keon/awesome-nlp">Awesome NLP</a><img src= "https://img.shields.io/github/stars/keon/awesome-nlp?style=social"> Curated list of Natural Language Processing Resources</p>
-<ul>
-<li>I&rsquo;ve been the Primary Maintainer for <a href="https://github.com/keon/awesome-nlp">Awesome-NLP</a>, which is also featured in Github&rsquo;s Official Machine Learning <a href="https://github.com/collections/machine-learning">Collection</a> since 2016 and recommended by Stanford CS 230 in 2020</li>
-</ul>
+<p><a href="https://github.com/keon/awesome-nlp">Awesome NLP</a><img src= "https://img.shields.io/github/stars/keon/awesome-nlp?style=social" style="width:10%;display: inline-block;"> Curated list of Natural Language Processing Resources.</p>
 </li>
-<li>
-<p>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href="https://github.com/NirantK/hindi2vec">hindi2vec</a> <img src= "https://img.shields.io/github/stars/NirantK/hindi2vec?style=social"></p>
-</li>
+</ol>
+<p>I&rsquo;ve been the Primary Maintainer for <a href="https://github.com/keon/awesome-nlp">Awesome-NLP</a>
+* Recommended by Dr. Andrew Ng&rsquo;s (Stanford) CS 230
+* Featured in Github&rsquo;s Official Machine Learning <a href="https://github.com/collections/machine-learning">Collection</a> since 2016 and</p>
+<ol start="3">
+<li>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href="https://github.com/NirantK/hindi2vec">hindi2vec</a> <img src= "https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style="width:10%;display: inline-block;"></li>
 </ol>
 <h2 id="web-mentions---my-5-minutes-of-internet-fame">Web Mentions - My 5 minutes of Internet fame</h2>
 <h3 id="top-1-podium-finish-at-microsoft-ai-challenge-2018">Top 1% Podium finish at Microsoft AI Challenge 2018</h3>
