--- a/writing/belief_arbitrage.html
+++ b/writing/belief_arbitrage.html
@@ -293,10 +293,7 @@
       </div>
     </div>
 
-    <aside class="w-30-l mt6-l"><div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
-    <p class="f5 b mb3">What&#39;s in this writing</p>
-      <nav id="TableOfContents"></nav>
-  </div>
+    <aside class="w-30-l mt6-l">
 
 
 
