deploy: fbd75cf3691de6e2cc313f76467b26158496b1c0

--- a/about.html
+++ b/about.html
@@ -188,17 +188,18 @@ I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford 
 <h2 id="open-source-contributions">Open Source Contributions</h2>
 <ol>
 <li>
-<p><a href="https://github.com/NirantK/awesome-project-ideas">Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style="width:10%;display: inline-block;"/> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
+<p><a href="https://github.com/NirantK/awesome-project-ideas">Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style="width:20%;display: inline-block;"/> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
 </li>
 <li>
-<p><a href="https://github.com/keon/awesome-nlp">Awesome NLP</a><img src= "https://img.shields.io/github/stars/keon/awesome-nlp?style=social" style="width:10%;display: inline-block;"> Curated list of Natural Language Processing Resources.</p>
+<p><a href="https://github.com/keon/awesome-nlp">Awesome NLP</a><img src= "https://img.shields.io/github/stars/keon/awesome-nlp?style=social" style="width:20%; display: inline-block;"> Curated list of Natural Language Processing Resources.</p>
 </li>
 </ol>
-<p>I&rsquo;ve been the Primary Maintainer for <a href="https://github.com/keon/awesome-nlp">Awesome-NLP</a>
-* Recommended by Dr. Andrew Ng&rsquo;s (Stanford) CS 230
-* Featured in Github&rsquo;s Official Machine Learning <a href="https://github.com/collections/machine-learning">Collection</a> since 2016 and</p>
+<p>I&rsquo;ve been the Primary Maintainer for <a href="https://github.com/keon/awesome-nlp">Awesome-NLP</a></p>
+<pre><code>* Recommended by Dr. Andrew Ng's (Stanford) CS 230
+* Featured in Github's Official Machine Learning [Collection](https://github.com/collections/machine-learning) since 2016 and 
+</code></pre>
 <ol start="3">
-<li>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href="https://github.com/NirantK/hindi2vec">hindi2vec</a> <img src= "https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style="width:10%;display: inline-block;"></li>
+<li>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href="https://github.com/NirantK/hindi2vec">hindi2vec</a> <img src= "https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style="width:20%; display: inline-block;"></li>
 </ol>
 <h2 id="web-mentions---my-5-minutes-of-internet-fame">Web Mentions - My 5 minutes of Internet fame</h2>
 <h3 id="top-1-podium-finish-at-microsoft-ai-challenge-2018">Top 1% Podium finish at Microsoft AI Challenge 2018</h3>
