deploy: f9e9d2bd8dd50bec84f8457da861049289ae6859

--- a/consulting.html
+++ b/consulting.html
@@ -9,8 +9,8 @@ I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps l
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Help you discuss ML hiring, problem approach, deployment challenges, MLOps and more Build NLP datasets and models for you Can advice you in some technology decisions.">
-<meta name=generator content="Hugo 0.86.0">
+ Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
+<meta name=generator content="Hugo 0.86.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
 <meta property="og:title" content>
@@ -19,7 +19,7 @@ I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps l
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Help you discuss ML hiring, problem approach, deployment challenges, MLOps and more Build NLP datasets and models for you Can advice you in some technology decisions.">
+ Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://nirantk.com/consulting.html"><meta property="article:section" content>
 <meta itemprop=name content>
@@ -28,8 +28,8 @@ I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps l
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Help you discuss ML hiring, problem approach, deployment challenges, MLOps and more Build NLP datasets and models for you Can advice you in some technology decisions.">
-<meta itemprop=wordCount content="157">
+ Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
+<meta itemprop=wordCount content="227">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
 <meta name=twitter:title content>
 <meta name=twitter:description content="How can Nirant help you? Things to know I&rsquo;m Nirant.
@@ -37,7 +37,7 @@ I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps l
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Help you discuss ML hiring, problem approach, deployment challenges, MLOps and more Build NLP datasets and models for you Can advice you in some technology decisions.">
+ Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
@@ -109,15 +109,27 @@ writing
 <p>I can-</p>
 <ul>
 <li>Discuss anything about data or Machine Learning which you need help with</li>
-<li>Help you discuss ML hiring, problem approach, deployment challenges, MLOps and more</li>
 <li>Build NLP datasets and models for you</li>
 <li>Can advice you in some technology decisions. I&rsquo;ll choose to say, &ldquo;I don&rsquo;t know&rdquo;, instead of misleading you</li>
 <li>Tweet/Write and spread the word about you if it helps</li>
 <li>Use your product and recommend it freely to teams I know</li>
 </ul>
+<h3 id=hiring>Hiring</h3>
+<ol>
+<li>Guidance on sourcing candidates</li>
+</ol>
+<ul>
+<li>I can recommend what to look for in candidates based on their experience, projects, etc.</li>
+<li>You would still have complete control and do your own sourcing</li>
+</ul>
+<ol start=2>
+<li>Setting up an interview process. This includes assignments, interview stages, interview questions etc.</li>
+<li>Assessing assignment submissions. This includes feedback on the quality of the work, and if it&rsquo;s a good fit for the team.</li>
+<li>Taking the ML round interview, specially if it&rsquo;s NLP</li>
+</ol>
 <h2 id=what-i-cannot-do-for-you>What I cannot do for you</h2>
 <ul>
-<li>Recommend candidates or refer friends to join you full time</li>
+<li>Do candidates sourcing or complete end to end resume screening or refer friends to join you full time</li>
 </ul>
 <h2 id=contact>Contact</h2>
 <p>Write to me at hello [at] nirantk [dot] com</p>
