deploy: bbb5d2f741ea285ba59b453ba6f039d22435c3a2

--- a/writing.html
+++ b/writing.html
@@ -92,14 +92,14 @@ Collection of my Essays and Thoughts
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
-<a href=./writing/belief_arbitrage.html class="link black dim">
-Belief Arbitrage
+<a href=./writing/data-science-org-design.html class="link black dim">
+Data Science Org Design for Startups
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-This is a 3 part essay.
-Part 1: Talent In my teenage years, I first understood that the kind of family you’re born into gives you access to certain kinds of wealth e.g. money, network, habits/knowledge and social capital to do things you want.
-Most people in my peer group and even among the adults I could speak to, used these resources to make their own life materially more comfortable.
+Data Science Org Design for Startups While there is plenty of good advice on making ML work and making a career as a Data Scientist - I think very little discussion happens on the organization design for Data Science itself.
+This blog will hopefully help folks not just build their team, but also understand the ecosystem from which they are hiring.
+Organization Design is determined by these 3 broad categories:
 </div>
 </div>
 </div>
@@ -108,15 +108,14 @@ Most people in my peer group and even among the adults I could speak to, used th
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
-<a href=./writing/mlops_for_startups.html class="link black dim">
-MLOps for Startups
+<a href=./writing/belief_arbitrage.html class="link black dim">
+Belief Arbitrage
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-OVERVIEW Start your development by writing the overall impact and feature overview in the Press Release doc and README
-If your time to ship is more than 2 weeks, write a functional spec
-In case of bug fixes, add bug details or link to Asana/Github Issues
-Always. Do trunk-based development. Don’t restrict a deployment trigger to specific people. As soon as you are done, go ahead, deploy and let others deploy.
+This is a 3 part essay.
+Part 1: Talent In my teenage years, I first understood that the kind of family you’re born into gives you access to certain kinds of wealth e.g. money, network, habits/knowledge and social capital to do things you want.
+Most people in my peer group and even among the adults I could speak to, used these resources to make their own life materially more comfortable.
 </div>
 </div>
 </div>
