--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@ Recent
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=./writing/data-science-org-design.html class="db grow">
+<img src=https://nirantk.com/images/data-science-org-design.jpeg class=img alt="image from Data Science Org Design for Startups">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/data-science-org-design.html class="color-inherit dim link">
+Data Science Org Design for Startups
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Data Science Org Design for Startups While there is plenty of good advice on making ML work and making a career as a Data Scientist - I think very little discussion happens on the organization design for Data Science itself.
+This blog will hopefully help folks not just build their team, but also understand the ecosystem from which they are hiring.
+Organization Design is determined by these 3 broad categories:
+</div>
+<a href=./writing/data-science-org-design.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=./writing/belief_arbitrage.html class="db grow">
 <img src=https://nirantk.com/images/belief_arbit.png class=img alt="image from Belief Arbitrage">
 </a>
@@ -108,28 +134,6 @@ Part 1: Talent In my teenage years, I first understood that the kind of family y
 Most people in my peer group and even among the adults I could speak to, used these resources to make their own life materially more comfortable.
 </div>
 <a href=./writing/belief_arbitrage.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/mlops_for_startups.html class="color-inherit dim link">
-MLOps for Startups
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-OVERVIEW Start your development by writing the overall impact and feature overview in the Press Release doc and README
-If your time to ship is more than 2 weeks, write a functional spec
-In case of bug fixes, add bug details or link to Asana/Github Issues
-Always. Do trunk-based development. Don’t restrict a deployment trigger to specific people. As soon as you are done, go ahead, deploy and let others deploy.
-</div>
-<a href=./writing/mlops_for_startups.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
