deploy: ae88b2bff706a8fec41fd0c2fd0ece9d8dc79222

--- a/consulting.html
+++ b/consulting.html
@@ -10,7 +10,7 @@ I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as we
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
  Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
-<meta name=generator content="Hugo 0.86.1">
+<meta name=generator content="Hugo 0.87.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
 <meta property="og:title" content>
@@ -29,7 +29,7 @@ I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as we
 I&rsquo;m a hands on engineer and actively give back.
 What I can do for you I can-
  Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
-<meta itemprop=wordCount content="227">
+<meta itemprop=wordCount content="228">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
 <meta name=twitter:title content>
 <meta name=twitter:description content="How can Nirant help you? Things to know I&rsquo;m Nirant.
@@ -132,7 +132,7 @@ writing
 <li>Do candidates sourcing or complete end to end resume screening or refer friends to join you full time</li>
 </ul>
 <h2 id=contact>Contact</h2>
-<p>Write to me at hello [at] nirantk [dot] com</p>
+<p>Figure out a time that works for you here: <a href=https://calendly.com/nirantk/assist>https://calendly.com/nirantk/assist</a></p>
 </div>
 </article>
 </div>
