deploy: 4ddd9fbee2ee9d971375fbd0fa19bb2314cdb5b0

--- a/drafts.html
+++ b/drafts.html
@@ -5,7 +5,7 @@
 <title>Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
 <link href=./drafts/index.xml rel=alternate type=application/rss+xml title="Nirant Kasliwal">
@@ -90,6 +90,21 @@ https://danluu.com/startup-tradeoffs/#fnref:S
 Beyond First 90 Days - 2 Less Obvious Ideas
 I am assuming that you already know the hygiene factors: Make few promises. Keep most of them and exceed few of them atleast. Get to like the top 5% in the skill of effort estimation for your own work at the very least. And so on.
 Contribute to Developer Ecosystem Improving any part of the developer ecosystem is useful and visible at the same time.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Drafts</span>
+<h1 class="f3 near-black">
+<a href=./drafts/salary_opium.html class="link black dim">
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+This one is for those who seek variety, ambition and thrill and are okay with paying the price for the same in status, wealth, and health.
+If this does not apply to you, don&rsquo;t bother reading on. Your time is valuable.
+Long time ago, the Chinese people were formidable one. The British tried to conquer them, but they were too strong.
 </div>
 </div>
 </div>
