--- a/writing/reflectedglory.html
+++ b/writing/reflectedglory.html
@@ -5,7 +5,7 @@
 <title>Don't Bask in Reflected Glory | Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="How to keep your identity small?">
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=../ananke/css/main.min.css>
 <meta property="og:title" content="Don't Bask in Reflected Glory">
@@ -90,7 +90,7 @@ writing
 <span class="f6 mv4 dib tracked"> - 7 minutes read</span>
 <span class="f6 mv4 dib tracked"> - 1299 words</span>
 </header>
-<div class="nested-copy-line-height lh-copy avenir f4 nested-links nested-img mid-gray pr4-l w-two-thirds-l"><pre><code>ये जो लोग-बाग हैं, जंगल की आग हैं 
+<div class="nested-copy-line-height lh-copy avenir f4 nested-links nested-img mid-gray pr4-l w-two-thirds-l"><pre tabindex=0><code>ये जो लोग-बाग हैं, जंगल की आग हैं 
 Ye jo log baag hain, Jungle ki aag hain
 The people, are jungle fire
 
@@ -127,15 +127,15 @@ I&rsquo;ll share what I think is the bare minimum context you need to have:</p>
 <p>Identity, in the crudest sense are the words (and ideas) that you use to describe yourself - in your head.
 For instance, while you might be someone who build rocket ships, your identity might be &ldquo;I am a <code>family man</code>&rdquo;. Or “I am a <code>craftsman engineer</code> making ships for space travel”</p>
 <p>Here is a short mental exercise. Fill this blank with <em>at least</em> 3 small phrases:</p>
-<pre><code>I am ___
+<pre tabindex=0><code>I am ___
 </code></pre><p>Done?</p>
 <p>Awesome. Let&rsquo;s carry on:</p>
 <p>Here is what I came up with a few years ago:</p>
-<pre><code>I am {Indian, guy, techie}
+<pre tabindex=0><code>I am {Indian, guy, techie}
 </code></pre><p>The labels in <code>{}</code> are (in the very crude sense) - my identity. Notice that these labels do not always have to be professional, personal or even <em>Truth</em> in the strictest sense.</p>
 <p>They don&rsquo;t have to align with reality in any meaningful way. They simply describe how you perceive yourself.</p>
 <p>Want another example? Here is what a friend filled:</p>
-<pre><code>I am {smart, get things done, make no excuses}
+<pre tabindex=0><code>I am {smart, get things done, make no excuses}
 </code></pre><p>If you have not filled in your three, please pause - take a quick second and type it down somewhere. I&rsquo;ll wait.</p>
 <hr>
 <p>Cool, I hope you have your three written or typed somewhere accessible. Let&rsquo;s carry on. We&rsquo;ll come back to it, I promise.</p>
