deploy: 5b65d2799f8776523e09ba23e01cd630c8704c8d

--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@ Building a Data Science Team at a Startup
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 Hello!
-If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 201. We were directly responsible for most Natural Language Processing needs within the business.
+If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 2021.
+We were directly responsible for most Natural Language Processing needs within the business.
 </div>
 <a href=./writing/building-a-data-science-team.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
