--- a/writing.html
+++ b/writing.html
@@ -194,7 +194,8 @@ Building a Data Science Team at a Startup
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Hello!
-If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 201. We were directly responsible for most Natural Language Processing needs within the business.
+If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 2021.
+We were directly responsible for most Natural Language Processing needs within the business.
 </div>
 </div>
 </div>
