deploy: 5cb0b7647f1092f065189ece2ff92bb9792d3a8a

--- a/writing.html
+++ b/writing.html
@@ -209,9 +209,9 @@ Verloop NLP Interview Prep Guide
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
+Update, September 2021: This guide is a little outdated, but not obsolete. I no longer work at Verloop.io.
 Preparation Guide I&rsquo;ve been an early Machine Learning Engineer at Verloop.io for almost 1.5 years, primarily working on NLP problems and now more in an Engineering Manager-ish role.
 This is the guide which I sometimes send to our candidates after they submit the Programming Challenge. If a candidate has relevant open source code sample, specially to other repositories we may choose to waive off the Programming Challenge completely.
-I originally wrote this to give a chance to folks coming from non-NLP background to get a sense of the problem space a little better.
 </div>
 </div>
 </div>
