--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@ Verloop NLP Interview Prep Guide
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Update, September 2021: This guide is a little outdated, but not obsolete. I no longer work at Verloop.io.
 Preparation Guide I&rsquo;ve been an early Machine Learning Engineer at Verloop.io for almost 1.5 years, primarily working on NLP problems and now more in an Engineering Manager-ish role.
 This is the guide which I sometimes send to our candidates after they submit the Programming Challenge. If a candidate has relevant open source code sample, specially to other repositories we may choose to waive off the Programming Challenge completely.
-I originally wrote this to give a chance to folks coming from non-NLP background to get a sense of the problem space a little better.
 </div>
 <a href=./writing/verloop-ml-prep-guide.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
