deploy: 6ce1068bcc8267b5019c3bfd9511a53fb0f84dff

--- a/now.html
+++ b/now.html
@@ -88,7 +88,7 @@ Now
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
 <h1 id=what-im-doing-now>What I’m doing now</h1>
-<h2 id=work-after-almost-6-months-of-machine-learning-consultingcareer-break-ive-moved-to-a-role-away-from-the-data-science-field-im-now-working-as-a-software-engineer-at-sundialsohttpswwwsundialso>Work: After almost 6 months of Machine Learning consulting/career break, I&rsquo;ve moved to a role away from the data science field. I’m now working as a Software Engineer at <a href=https://www.sundial.so/>Sundial.so</a>.</h2>
+<h2 id=work-after-almost-6-months-of-machine-learning-consultingconsultingcareer-break-ive-moved-to-a-role-away-from-the-data-science-field-im-now-working-as-a-software-engineer-at-sundialsohttpswwwsundialso>Work: After almost 6 months of <a href=./consulting>Machine Learning consulting</a>/career break, I&rsquo;ve moved to a role away from the data science field. I’m now working as a Software Engineer at <a href=https://www.sundial.so/>Sundial.so</a>.</h2>
 <p>Last Updated in December 2021 from Bengaluru, India</p>
 <p>The concept of now page is from <a href=https://sivers.org/nowff>Derek Sivers</a></p>
 </div>
