--- a/about.html
+++ b/about.html
@@ -4,28 +4,32 @@
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Me in 10 seconds Most recently, I built the ML stack and team at Verloop.io from 0 to 1 as the Founding ML Engineer.
-I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.
-I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.">
+<meta name=description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
+I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
+I live in Bengaluru, but grew up in Surat, Gujarat.
+Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
 <meta name=generator content="Hugo 0.89.4">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
 <meta property="og:title" content>
-<meta property="og:description" content="Me in 10 seconds Most recently, I built the ML stack and team at Verloop.io from 0 to 1 as the Founding ML Engineer.
-I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.
-I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.">
+<meta property="og:description" content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
+I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
+I live in Bengaluru, but grew up in Surat, Gujarat.
+Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://nirantk.com/about.html"><meta property="article:section" content>
 <meta itemprop=name content>
-<meta itemprop=description content="Me in 10 seconds Most recently, I built the ML stack and team at Verloop.io from 0 to 1 as the Founding ML Engineer.
-I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.
-I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.">
-<meta itemprop=wordCount content="495">
+<meta itemprop=description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
+I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
+I live in Bengaluru, but grew up in Surat, Gujarat.
+Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
+<meta itemprop=wordCount content="479">
 <meta itemprop=keywords content="personal,"><meta name=twitter:card content="summary">
 <meta name=twitter:title content>
-<meta name=twitter:description content="Me in 10 seconds Most recently, I built the ML stack and team at Verloop.io from 0 to 1 as the Founding ML Engineer.
-I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.
-I&rsquo;ve written a book about NLP. Some of my work is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.">
+<meta name=twitter:description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
+I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
+I live in Bengaluru, but grew up in Surat, Gujarat.
+Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
@@ -88,10 +92,9 @@ writing
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
 <h2 id=me-in-10-seconds>Me in 10 seconds</h2>
-<p>Most recently, I built the ML stack and team at <a href=https://verloop.io>Verloop.io</a> from 0 to 1 as the Founding ML Engineer.</p>
-<p>I&rsquo;ve been doing NLP (Natural Language Processing) for a bit, and did Computer Vision before. Have some exposure to Document Search, Embedded ML and Predictive Analytics before.</p>
-<p>I&rsquo;ve written a <a href=#book>book</a> about NLP. Some of <a href=https://github.com/keon/awesome-nlp>my work</a> is recommended by Stanford CS 230 and my blogs found useful by Nobel Laureates.</p>
-<p>I now live in the Silicon Valley of India: Bengaluru, but grew up in Surat, Gujarat.</p>
+<p>I now do mostly <a href=https://www.getdbt.com/what-is-analytics-engineering/>analytics engineering</a> at Sundial.so.</p>
+<p>I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a <a href=#book>book</a> on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.</p>
+<p>I live in Bengaluru, but grew up in Surat, Gujarat.</p>
 <h2 id=book-nlp-in-python-quickstart-guidehttpsreadamazoninkpembedasinb07l3plqs1previewnewtablinkcodekperef_cm_sw_r_kb_dp_mrbprc9zwrc8b4skt74x>Book: <a href="https://read.amazon.in/kp/embed?asin=B07L3PLQS1&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_MRBPRC9ZWRC8B4SKT74X">NLP in Python: Quickstart Guide</a></h2>
 <p>Meant primarily for programmers to add NLP sugar to their skillset. Written with code examples and programmer-first mindset. Available on Amazon and other select book stores.</p>
 <p>Code is also on <a href=https://github.com/NirantK/nlp-python-deep-learning>Github</a></p>
@@ -107,6 +110,9 @@ writing
 <h2 id=open-source-contributions>Open Source Contributions</h2>
 <ol>
 <li>
+<p>Hinglish <a href=https://github.com/NirantK/Hinglish>code</a>, <a href=https://aclanthology.org/2020.semeval-1.119/>paper</a> focussed on code-mixed languages was published in ACL 2019.</p>
+</li>
+<li>
 <p><a href=https://github.com/NirantK/awesome-project-ideas>Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style=width:20%;display:inline-block> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
 </li>
 <li>
@@ -117,7 +123,7 @@ writing
 <pre><code>* Recommended by Dr. Andrew Ng's (Stanford) CS 230
 * Featured in Github's Official Machine Learning [Collection](https://github.com/collections/machine-learning) since 2016 and 
 </code></pre>
-<ol start=3>
+<ol>
 <li>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href=https://github.com/NirantK/hindi2vec>hindi2vec</a> <img src="https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style=width:20%;display:inline-block></li>
 </ol>
 <h2 id=web-mentions---my-5-minutes-of-internet-fame>Web Mentions - My 5 minutes of Internet fame</h2>
